# pytest-html-example

./: .gitignore  README.md  pyproject.toml  pytest.ini  report.html
tests/: conftest.py  test_sample.py
