[tool.poetry]
name = "pytest-html-example"
version = "0.1.0"
description = ""
authors = ["ericsalesdeandrade <sdaeric19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-html = "^4.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
